--- a/index.html
+++ b/index.html
@@ -471,9 +471,9 @@
             </div> <!-- end s-footer__contact-content -->
 
             <div class="row s-footer__bottom">
-                <div class="column ss-copyright">
+                <!-- <div class="column ss-copyright">
                     <span>© Copyright Bastián Arriagada Quero 2025</span>
-                </div>
+                </div> -->
 
                 <div class="ss-go-top">
                     <a class="smoothscroll" title="Volver Arriba" href="#top">
